@@ -15,6 +15,8 @@ cupt (0.6.6~) UNRELEASED; urgency=low
           documentation.
         - 'update_release_and_index_data': honor
           'apt::update::post-invoke-success' option.
+        - 'update_release_and_index_data': don't try to check signatures in
+          simulate mode.
     - Config:
       - Added configuration variable 'apt::update::post-invoke-success'.
   * debian/rules:
